// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SectionEditor should render 1`] = `
<SectionEditor__SectionCanvas
  data-test="section-editor"
  id={null}
>
  <Modal
    isOpen={false}
    negativeButtonText="Cancel"
    onClose={[MockFunction]}
    onConfirm={[MockFunction]}
    positiveButtonText="Delete"
    title="Delete section"
    warningMessage="All edits, properties and routing settings will also be removed."
  />
  <MoveSectionQuery
    questionnaireId="1"
  >
    <Component />
  </MoveSectionQuery>
  <SectionEditor__Padding>
    <RichTextEditor
      autoFocus={false}
      controls={
        Object {
          "emphasis": true,
        }
      }
      disabled={false}
      id="section-title"
      label={
        <DescribedText
          description="This will be shown on the hub."
        >
          Section title
        </DescribedText>
      }
      maxHeight={12}
      multiline={false}
      name="title"
      onUpdate={[Function]}
      placeholder=""
      size="large"
      testSelector="txt-section-title"
      value="Section 1"
    />
    <SectionEditor__HorizontalRule />
    <SectionIntroduction
      handleUpdate={[Function]}
      section={
        Object {
          "alias": "alias",
          "collapsibleSummary": false,
          "comments": Array [],
          "id": "section-1",
          "introductionContent": "Intro content",
          "introductionPageDescription": "Intro description",
          "introductionTitle": "Intro title",
          "questionnaire": Object {
            "collapsibleSummary": false,
            "hub": false,
            "id": "2",
            "navigation": true,
          },
          "repeatingSection": false,
          "repeatingSectionListId": null,
          "requiredCompleted": true,
          "sectionSummary": false,
          "sectionSummaryPageDescription": "Summary description",
          "showOnHub": true,
          "title": "Section 1",
          "validationErrorInfo": Object {
            "errors": Array [],
            "id": "3",
            "totalCount": 0,
          },
        }
      }
    />
    <SectionEditor__HorizontalRule />
    <SectionSummary
      errors={Array []}
      id="section-1"
      sectionSummary={false}
      sectionSummaryPageDescription="Summary description"
    />
    <SectionEditor__HorizontalRule />
    <RepeatingSection
      handleUpdate={[Function]}
      section={
        Object {
          "alias": "alias",
          "collapsibleSummary": false,
          "comments": Array [],
          "id": "section-1",
          "introductionContent": "Intro content",
          "introductionPageDescription": "Intro description",
          "introductionTitle": "Intro title",
          "questionnaire": Object {
            "collapsibleSummary": false,
            "hub": false,
            "id": "2",
            "navigation": true,
          },
          "repeatingSection": false,
          "repeatingSectionListId": null,
          "requiredCompleted": true,
          "sectionSummary": false,
          "sectionSummaryPageDescription": "Summary description",
          "showOnHub": true,
          "title": "Section 1",
          "validationErrorInfo": Object {
            "errors": Array [],
            "id": "3",
            "totalCount": 0,
          },
        }
      }
    />
  </SectionEditor__Padding>
</SectionEditor__SectionCanvas>
`;

exports[`SectionEditor should render 2`] = `
<SectionEditor__SectionCanvas
  data-test="section-editor"
  id={null}
>
  <Modal
    isOpen={false}
    negativeButtonText="Cancel"
    onClose={[MockFunction]}
    onConfirm={[MockFunction]}
    positiveButtonText="Delete"
    title="Delete section"
    warningMessage="All edits, properties and routing settings will also be removed."
  />
  <MoveSectionQuery
    questionnaireId="1"
  >
    <Component />
  </MoveSectionQuery>
  <SectionEditor__Padding>
    <RichTextEditor
      autoFocus={false}
      controls={
        Object {
          "emphasis": true,
        }
      }
      disabled={false}
      id="section-title"
      label={
        <DescribedText
          description="This will be shown on the hub."
        >
          Section title
        </DescribedText>
      }
      maxHeight={12}
      multiline={false}
      name="title"
      onUpdate={[Function]}
      placeholder=""
      size="large"
      testSelector="txt-section-title"
      value="Section 2"
    />
    <SectionEditor__HorizontalRule />
    <SectionIntroduction
      handleUpdate={[Function]}
      section={
        Object {
          "alias": "alias",
          "collapsibleSummary": false,
          "comments": Array [],
          "id": "section-2",
          "introductionContent": "Intro content",
          "introductionTitle": "Intro title",
          "questionnaire": Object {
            "collapsibleSummary": false,
            "hub": false,
            "id": "2",
            "navigation": true,
          },
          "repeatingSection": false,
          "repeatingSectionListId": null,
          "requiredCompleted": true,
          "sectionSummary": false,
          "showOnHub": true,
          "title": "Section 2",
          "validationErrorInfo": Object {
            "errors": Array [],
            "id": "3",
            "totalCount": 0,
          },
        }
      }
    />
    <SectionEditor__HorizontalRule />
    <SectionSummary
      errors={Array []}
      id="section-2"
      sectionSummary={false}
    />
    <SectionEditor__HorizontalRule />
    <RepeatingSection
      handleUpdate={[Function]}
      section={
        Object {
          "alias": "alias",
          "collapsibleSummary": false,
          "comments": Array [],
          "id": "section-2",
          "introductionContent": "Intro content",
          "introductionTitle": "Intro title",
          "questionnaire": Object {
            "collapsibleSummary": false,
            "hub": false,
            "id": "2",
            "navigation": true,
          },
          "repeatingSection": false,
          "repeatingSectionListId": null,
          "requiredCompleted": true,
          "sectionSummary": false,
          "showOnHub": true,
          "title": "Section 2",
          "validationErrorInfo": Object {
            "errors": Array [],
            "id": "3",
            "totalCount": 0,
          },
        }
      }
    />
  </SectionEditor__Padding>
</SectionEditor__SectionCanvas>
`;
